Ratings Endpoint Added
